--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -5,16 +5,12 @@
     android:orientation="vertical" 
     android:background="@color/skymba_bgcolor"
     >
-
-
             <RelativeLayout
                 android:id="@+id/topHome"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="@drawable/page_up"
                 android:orientation="horizontal" >
-
-                
                 <ImageView
                     android:id="@+id/BagOrLifeToggle"
                     android:layout_width="wrap_content"
@@ -24,10 +20,6 @@
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                      />
-               
-                
-                
-                
 
                 <ImageView
                     android:id="@+id/personalCenterImg"
@@ -40,9 +32,7 @@
                     android:visibility="gone"
                      />
                 
-
             </RelativeLayout>
-
             <LinearLayout
                 android:id="@+id/imgLay"
                 android:layout_width="match_parent"
@@ -50,30 +40,24 @@
                 android:orientation="vertical" 
                android:background="@color/skymba_bgcolor"
                 >
-
-                <com.mba.mygridview.MyGridView
+                <GridView
                     android:id="@+id/gridViewBag"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:numColumns="auto_fit" 
                    android:scrollbars="none"
                     >
-                </com.mba.mygridview.MyGridView>
-                <com.mba.mygridview.MyGridView
+                </GridView>
+                <GridView
                     android:id="@+id/gridViewLife"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:numColumns="auto_fit" 
                     android:visibility="gone"
-                   android:scrollbars="none"
+                   	android:scrollbars="none"
                    android:listSelector="@android:color/transparent"
                     
                     >
-                </com.mba.mygridview.MyGridView>
-                
-
+                </GridView>
             </LinearLayout>
-
         </LinearLayout>
-    
-
