--- a/res/layout/shelf_item.xml
+++ b/res/layout/shelf_item.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/shelf_lay"
+    android:background="@drawable/item_bg"
      >
-	<RelativeLayout
-	    android:layout_width="wrap_content"
-        android:layout_height="133.8dp"
-        android:paddingLeft="21.5dp"
-        android:paddingRight="21.5dp"
-	    >
-	 
-	   
     <ImageView
         android:id="@+id/shelf_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="21.5dp"
+        android:paddingRight="21.5dp"
         />
     <TextView 
         android:id="@+id/updateView"
@@ -32,6 +27,5 @@
         android:text="10+"
         android:textColor="@color/white"
         />
-     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
